--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-NODE_ENV=production
+MONGO_CONNECTION_STRING=mongodb://127.0.0.1:27017/kanbas
+NODE_ENV=development
 NETLIFY_URL=http://localhost:3000
 REMOTE_SERVER=http://localhost:4000
-SESSION_SECRET=what ever
-MONGO_CONNECTION_STRING=mongodb+srv://goyalkaran31:<password>@kanbas.1xxqhyd.mongodb.net/?retryWrites=true&w=majority&appName=Kanbas
-# MONGO_CONNECTION_STRING=mongodb+srv://goyalkaran31:*****@kanbas.1xxqhyd.mongodb.net/
+SESSION_SECRET=super session secret
